# idea-courtroom

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  idea_courtroom.jsx  idea_courtroom_gateway.jsx
backend/: courtroom.py  main.py  prompts.py  pyproject.toml  schemas.py
