[project]
name = "idea-courtroom-backend"
version = "0.1.0"
description = "The Idea Courtroom — FastAPI backend using llm_gatewayV2"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
